force-app/main/default/objects/Board_Setting__mdt/Board_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Board Setting</label>
    <pluralLabel>Board Settings</pluralLabel>
</CustomObject>