force-app/main/default/objects/Board_Setting__mdt/fields/Default_Annual_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Default_Annual_Commitment__c</fullName>
    <description>Default per-member annual giving commitment ($), used to seed each board year's Annual Giving Summary when no per-member value is set. PLACEHOLDER pending JCRC confirmation (client Q9/Q10). JSI-123 / Jason Ott.</description>
    <label>Default Annual Commitment ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>