force-app/main/default/objects/Board_Setting__mdt/fields/Default_Term_Length_Years__c.field-meta.xml
<CustomField>
    <fullName>Default_Term_Length_Years__c</fullName>
    <description>Standard board term length in years; used by automation to suggest a term End Date. PLACEHOLDER pending JCRC confirmation (client Q1). JSI-123 / Jason Ott.</description>
    <label>Default Term Length (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>