force-app/main/default/objects/Board_Setting__mdt/fields/Expiring_Soon_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Soon_Window_Days__c</fullName>
    <description>How many days before a term's End Date it counts as "expiring soon" (drives Board_Term__c.Expiring_Soon__c). PLACEHOLDER (default 90) pending JCRC confirmation (client Q4). JSI-123 / Jason Ott.</description>
    <label>Expiring Soon Window (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>