force-app/main/default/objects/Board_Setting__mdt/fields/Roll_Off_Action__c.field-meta.xml
<CustomField>
    <fullName>Roll_Off_Action__c</fullName>
    <description>What automation should do when a term reaches its End Date. PLACEHOLDER pending JCRC confirmation (client Q4). JSI-123 / Jason Ott.</description>
    <label>Roll-Off Action</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flag Only</fullName>
                <default>true</default>
                <label>Flag Only</label>
            </value>
            <value>
                <fullName>Auto Status and Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>